[project]
name = "pdf-to-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "gradio>=5.5.0",
    "loguru>=0.7.2",
    "openai>=1.0.0",
    "promptic>=0.7.7",
    "pydantic>=2.9.2",
    "pypdf>=5.0.1",
    "sentry-sdk>=2.16.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.32.0",
]
